--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,30 @@
     -webkit-transition: all 300ms;
     transition: all 300ms;
 }
+.slider1 {
+  width: 1080px;
+  max-width:1080px;
+  padding-right: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0 auto;
+}
+.sliderpub2{
+  width: 500px;
+  max-width:500px;
+  padding-right: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0 auto;}
+
+  .sliderpub3{
+    width: 200px;
+    max-width:200px;
+    padding-right: 0px;
+    position: fixed;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0 auto;}
 
 .content-1{
   width: 800px;
@@ -401,8 +425,8 @@ a:hover {
   color: #FF0400;
 }
 .sliderP {
-  width: 720px;
-  max-width:720px;
+  width: 640px;
+  max-width:640px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
