--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,13 @@
   margin-right: auto;
   margin-top: 0 auto;}
 
+  .fb-like{
+ background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+
   .sliderpub3{
     width: 200px;
     max-width:200px;
@@ -229,8 +236,8 @@ body {
 
 
 p {
-  color: #FFF;
-  font-size: 160%;
+  color: white;
+  font-size: 100%;
   line-height: 155%;
   padding: 3%;
   text-indent: 2%;
@@ -241,7 +248,6 @@ p {
   text-align: center;
   float: none;
   font-weight: bold;
-  color: #FF0400;
 }
 
 .j {
@@ -405,7 +411,7 @@ a:hover {
   text-align: center;
   float: none;
   font-weight: bold;
-  color: #FF0400;
+
 }
 
 .FPI img {
@@ -422,7 +428,7 @@ a:hover {
   text-align: center;
   float: none;
   font-weight: bold;
-  color: #FF0400;
+
 }
 .sliderP {
   width: 640px;
